progress IDP/OIDC manager, SIOP session handling, oidc code response,... added sequence diagram

--- a/service-matrix.properties
+++ b/service-matrix.properties
@@ -9,4 +9,4 @@ id.walt.custodian.Custodian=id.walt.custodian.WaltIdCustodian
 id.walt.auditor.Auditor=id.walt.auditor.WaltIdAuditor
 id.walt.services.essif.jsonrpc.JsonRpcService=id.walt.services.essif.jsonrpc.WaltIdJsonRpcService
 id.walt.services.context.ContextManager=id.walt.services.context.WaltIdContextManager
-id.walt.verifier.backend.VerifierManager=id.walt.oidp.oidc.OIDCManager
+id.walt.verifier.backend.VerifierManager=id.walt.idp.siop.SIOPManager
