--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,6 +1,6 @@
 {
-  "verifierUiUrl": "http://localhost:4000",
-  "verifierApiUrl": "http://localhost:4000/api/siop",
+  "verifierUiUrl": "http://172.19.0.1:8081",
+  "verifierApiUrl": "http://172.19.0.1:8081/api/siop",
   "wallets": {
     "walt.id": {
       "id": "walt.id",
