--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -37,26 +37,18 @@ jobs:
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
         with:
           arguments: build publish --no-daemon
-#      - name: Docker Build and Push SNAPSHOT
-#        uses: philpotisk/github-action-docker-build-push@master
-#        env:
-#          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-#          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-#          DOCKER_FILE: Dockerfile
-#          CONTAINER_TAG: waltid/ssikit:latest
-#      - name: Continuous deployment
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.SSH_HOST }}
-#          username: ${{ secrets.SSH_USERNAME }}
-#          password: ${{ secrets.SSH_PASSWORD }}
-#          port: ${{ secrets.SSH_PORT }}
-#          script: docker rm $(docker stop $(docker ps -a -q --filter ancestor=waltid/ssikit:latest --format="{{.ID}}")); docker pull waltid/ssikit:latest && docker container run -p 7000-7004:7000-7004 -itdv $(pwd)/data:/app/data docker.io/waltid/ssikit:latest serve -b 0.0.0.0
-#      - name: Prepare CD K8S
-#        run: sed "s/_DEFAULT_DEPLOYMENT_/$GITHUB_SHA/g" k8s/deployment-dev.yaml > k8s/deployment-dev_mod.yaml
-#      - name: Continuous deployment K8S
-#        uses: actions-hub/kubectl@master
-#        env:
-#          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-#        with:
-#          args: apply -n dev -f k8s/deployment-dev_mod.yaml
+      - name: Docker Build and Push SNAPSHOT
+        uses: philpotisk/github-action-docker-build-push@master
+        env:
+          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+          DOCKER_FILE: Dockerfile
+          CONTAINER_TAG: waltid/idpkit:latest
+      - name: Prepare CD K8S
+        run: sed "s/_DEFAULT_DEPLOYMENT_/$GITHUB_SHA/g" k8s/deployment-dev.yaml > k8s/deployment-dev_mod.yaml
+      - name: Continuous deployment K8S
+        uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: apply -n dev -f k8s/deployment-dev_mod.yaml
