enable snapshot action on main branch

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -3,7 +3,7 @@ name: Snapshot release workflow for walt.id SSI Kit
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   verify-wrapper:
