use nftkit config file from secret

--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -1,7 +1,7 @@
 {
   "externalUrl": "http://localhost:8080",
   "claimMappings": {
-    "mappings": [
+    "vc_mappings": [
       {
         "scope": [ "profile" ],
         "claim": "name",
