--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -21,7 +21,7 @@ data:
     {
       "externalUrl": "https://idp.walt-test.cloud",
       "claimMappings": {
-        "mappings": [
+        "vc_mappings": [
           {
             "scope": [ "profile" ],
             "claim": "name",
