--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -13,12 +13,12 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "ethers": "^5.6.9",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "web3modal": "^1.9.8",
     "webpack": "^4.46.0"
-  },
-  "devDependencies": {}
+  }
 }
