--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -39,6 +39,15 @@
         "valuePath": "$.credentialSubject.currentAddress[0]"
       }
     ],
+    "nft_mappings":  [
+      {
+        "scope": [ "award" ],
+        "claim": "awd",
+        "chain": "POLYGON",
+        "smartContractAddress": "0x9bc4d80c7b77ecc7107eac3961cb1dd98930f2b2",
+        "trait": "award"
+      }
+    ],
     "default_nft_token_claim": {
       "chain": "POLYGON",
       "smartContractAddress": "0x21dd9b1913d84ab295fdf19834b0b6824a5912ca"
