--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -70,6 +70,16 @@
           }
         ]
       }
+    },
+    "default_nft_policy":{
+      "withPolicyVeirfication": false,
+      "policy": "",
+      "query": "data.app.datanft.allow",
+      "inputs": {
+          "type": "T1",
+          "model": "M1",
+          "reference": "R1"
+      }
     }
   }
 }
