--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -72,7 +72,7 @@
       }
     },
     "default_nft_policy":{
-      "withPolicyVeirfication": false,
+      "withPolicyVerification": false,
       "policy": "",
       "query": "data.app.datanft.allow",
       "inputs": {
