--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,6 +1,11 @@
 {
   "verifierUiUrl": "http://localhost:8080",
   "verifierApiUrl": "http://localhost:8080/api/siop",
+   "additionalPolicies": [
+     {
+       "policy": "EUPolicy"
+     }
+   ],
   "wallets": {
     "walt.id": {
       "id": "walt.id",
