--- a/service-matrix.properties
+++ b/service-matrix.properties
@@ -1,4 +1,5 @@
-id.walt.services.essif.didebsi.DidEbsiService=id.walt.services.essif.didebsi.WaltIdDidEbsiService
+id.walt.services.ecosystems.essif.didebsi.DidEbsiService=id.walt.services.ecosystems.essif.didebsi.WaltIdDidEbsiService
+id.walt.services.ecosystems.essif.jsonrpc.JsonRpcService=id.walt.services.ecosystems.essif.jsonrpc.WaltIdJsonRpcService
 id.walt.services.vc.JsonLdCredentialService=id.walt.services.vc.WaltIdJsonLdCredentialService
 id.walt.services.vc.JwtCredentialService=id.walt.services.vc.WaltIdJwtCredentialService
 id.walt.services.crypto.CryptoService=id.walt.services.crypto.SunCryptoService
@@ -7,6 +8,5 @@ id.walt.services.jwt.JwtService=id.walt.services.jwt.WaltIdJwtService
 id.walt.signatory.Signatory=id.walt.signatory.WaltIdSignatory:signatory.conf
 id.walt.custodian.Custodian=id.walt.custodian.WaltIdCustodian
 id.walt.auditor.Auditor=id.walt.auditor.WaltIdAuditor
-id.walt.services.essif.jsonrpc.JsonRpcService=id.walt.services.essif.jsonrpc.WaltIdJsonRpcService
 id.walt.services.context.ContextManager=id.walt.services.context.WaltIdContextManager
 id.walt.verifier.backend.VerifierManager=id.walt.idp.siop.SIOPManager
