--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -20,5 +20,8 @@
     "vue-template-compiler": "^2.6.14",
     "web3modal": "^1.9.8",
     "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "@nuxt/types": "~2.15.0"
   }
 }
