--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,18 +1,14 @@
 {
   "verifierUiUrl": "http://localhost:8080",
   "verifierApiUrl": "http://localhost:8080/api/siop",
-   "additionalPolicies": [
-     {
-       "policy": "EUPolicy"
-     }
-   ],
+
   "wallets": {
-    "walt.id": {
-      "id": "walt.id",
-      "url": "https://wallet.walt-test.cloud",
-      "presentPath": "api/siop/initiatePresentation/",
+    "localhost": {
+      "id": "localhost",
+      "url": "http://localhost:8080",
+      "presentPath": "sharecredential",
       "receivePath" : "api/siop/initiateIssuance/",
-      "description": "walt.id web wallet"
+      "description": "localhost mobile wallet"
     }
   }
 }
