--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -9,12 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@walletconnect/web3-provider": "^1.7.8",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
     "ethers": "^5.6.9",
     "nuxt": "^2.15.8",
+    "qrious": "^4.0.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
