--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -8,7 +8,7 @@
       "url": "http://localhost:8080",
       "presentPath": "sharecredential",
       "receivePath" : "api/siop/initiateIssuance/",
-      "description": "localhost mobile wallet"
+      "description": "localhost wallet"
     }
   }
 }
