--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,5 +1,5 @@
 {
-  "verifierUiUrl": "http://localhost:3000",
+  "verifierUiUrl": "http://localhost:3000/sharecredential?state=",
   "verifierApiUrl": "http://localhost:3000/api/siop",
 
   "wallets": {
