--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,5 +36,7 @@ jobs:
           java-version: '16'
       - name: Running gradle build
         uses: eskatos/gradle-command-action@v1.3.3
+        env:
+            SKIP_LEGACY_OPENSSL_PROVIDER: ${{ secrets.SKIP_LEGACY_OPENSSL_PROVIDER }}
         with:
           arguments: build --no-daemon --info
