--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -35,6 +35,7 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          SKIP_LEGACY_OPENSSL_PROVIDER: ${{ secrets.SKIP_LEGACY_OPENSSL_PROVIDER }}
         with:
           arguments: build publish --no-daemon
       - name: Docker Build and Push SNAPSHOT
