--- a/src/test/resources/service-matrix.properties
+++ b/src/test/resources/service-matrix.properties
@@ -5,7 +5,7 @@ id.walt.services.vc.JwtCredentialService=id.walt.services.vc.WaltIdJwtCredential
 id.walt.services.crypto.CryptoService=id.walt.services.crypto.SunCryptoService
 id.walt.services.key.KeyService=id.walt.services.key.WaltIdKeyService
 id.walt.services.jwt.JwtService=id.walt.services.jwt.WaltIdJwtService
-id.walt.signatory.Signatory=id.walt.signatory.WaltIdSignatory:signatory.conf
+id.walt.signatory.Signatory=id.walt.signatory.WaltIdSignatory:config/signatory.conf
 id.walt.custodian.Custodian=id.walt.custodian.WaltIdCustodian
 id.walt.auditor.Auditor=id.walt.auditor.WaltIdAuditor
 id.walt.verifier.backend.VerifierManager=id.walt.idp.siop.SIOPManager
