fix docker build of embedded web page for wallet connect and sharecredential

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,7 @@
 build
 .*
 secret*
-web
+web/waltid-idpkit-ui/build
+web/waltid-idpkit-ui/.*
+web/waltid-idpkit-ui/dist
+web/waltid-idpkit-ui/node_modules
