--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@walletconnect/encoding": "^1.0.1",
     "@walletconnect/web3-provider": "^1.8.0",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
+    "consola": "^2.15.3",
     "core-js": "^3.26.0",
     "ethers": "^5.7.2",
     "nuxt": "^2.15.8",
@@ -24,6 +26,8 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@nuxt/types": "~2.15.8"
   }
 }
