--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@airgap/beacon-sdk": "^3.3.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@walletconnect/encoding": "^1.0.1",
     "@taquito/beacon-wallet": "^15.0.0",
     "@taquito/taquito": "^15.0.0",
     "@walletconnect/encoding": "^1.0.1",
