fix idpkit config for wallet redirection via proxy page

--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   verifier-config.json: |
     {
-      "verifierUiUrl": "https://idp.walt-test.cloud",
+      "verifierUiUrl": "https://idp.walt-test.cloud/sharecredential?state=",
       "verifierApiUrl": "https://idp.walt-test.cloud/api/siop",
       "additionalPolicies": [
         {
