fix idpkit with latest walletkit fix and re-enable oidc flow tests

--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,6 +1,6 @@
 {
   "verifierUiUrl": "http://localhost:8080/sharecredential?state=",
-  "verifierApiUrl": "http://localhost:8080/api/siop",
+  "verifierApiUrl": "http://localhost:8080/api/siop/default",
 
   "wallets": {
     "localhost": {
