--- a/config/verifier-config.json
+++ b/config/verifier-config.json
@@ -1,12 +1,12 @@
 {
-  "verifierUiUrl": "http://localhost:8080/sharecredential?state=",
-  "verifierApiUrl": "http://localhost:8080/api/siop/default",
+  "verifierUiUrl": "",
+  "verifierApiUrl": "http://localhost:8090/api/siop/default",
 
   "wallets": {
-    "localhost": {
-      "id": "localhost",
-      "url": "http://localhost:8080",
-      "presentPath": "sharecredential",
+    "walt.id": {
+      "id": "walt.id",
+      "url": "http://localhost:3000",
+      "presentPath": "api/siop/initiatePresentation/",
       "receivePath" : "api/siop/initiateIssuance/",
       "description": "localhost wallet"
     }
