--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -25,7 +25,8 @@ data:
   idp-config.json: |
     {
       "externalUrl": "https://idp.walt-test.cloud",
-      "claimConfig": {
+        "jsProjectExternalUrl":"http://nftkit-js:80",
+        "claimConfig": {
         "vc_mappings": [
           {
             "scope": [ "gaiax" ],
@@ -82,10 +83,29 @@ data:
             "valuePath": "$.credentialSubject.currentAddress[0]"
           }
         ],
-        "default_nft_token_claim": {
-          "chain": "POLYGON",
-          "smartContractAddress": "0x21dd9b1913d84ab295fdf19834b0b6824a5912ca"
+        "nft_mappings":  [
+        {
+          "scope": [ "award" ],
+          "claim": "awd",
+          "chain": "GHOSTNET",
+          "smartContractAddress": "KT1Rc59ukgW32e54aUdYqVzTM9gtHrA4JDYp",
+            "factorySmartContractAddress": "",
+          "trait": "award"
         }
+        ],
+        "default_nft_token_claim": {
+          "chain": "GHOSTNET",
+          "factorySmartContractAddress": "",
+          "smartContractAddress": "KT1Rc59ukgW32e54aUdYqVzTM9gtHrA4JDYp"
+        },
+        "default_nft_policy":{
+          "withPolicyVerification": false,
+          "policy": "",
+          "query": "",
+          "inputs": {
+              "Backgrounds": "Green"
+          }
+      }
       }
     }
   nft-config.json: |
