--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -24,7 +24,28 @@
     "vue-server-renderer": "2.7.14",
     "vue-template-compiler": "2.7.14",
     "web3modal": "^1.9.9",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+      "@near-wallet-selector/coin98-wallet": "^7.6.0",
+      "@near-wallet-selector/core": "^7.6.0",
+      "@near-wallet-selector/default-wallets": "^7.6.0",
+      "@near-wallet-selector/here-wallet": "^7.6.0",
+      "@near-wallet-selector/ledger": "^7.6.0",
+      "@near-wallet-selector/math-wallet": "^7.6.0",
+      "@near-wallet-selector/meteor-wallet": "^7.6.0",
+      "@near-wallet-selector/modal-ui": "^7.6.0",
+      "@near-wallet-selector/my-near-wallet": "^7.6.0",
+      "@near-wallet-selector/narwallets": "^7.6.0",
+      "@near-wallet-selector/near-wallet": "^7.6.0",
+      "@near-wallet-selector/nearfi": "^7.6.0",
+      "@near-wallet-selector/neth": "^7.6.0",
+      "@near-wallet-selector/nightly": "^7.6.0",
+      "@near-wallet-selector/nightly-connect": "^7.6.0",
+      "@near-wallet-selector/opto-wallet": "^7.6.0",
+      "@near-wallet-selector/sender": "^7.6.0",
+      "@near-wallet-selector/wallet-connect": "^7.6.0",
+      "@near-wallet-selector/welldone-wallet": "^7.6.0",
+      "@near-wallet-selector/xdefi": "^7.6.0",
+      "near-api-js": "^1.1.0"
   },
   "devDependencies": {
     "@nuxt/types": "~2.15.8"
