refactor: removed web gradle build, updated workflow, added web dockerfile, updated deployment

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -38,13 +38,20 @@ jobs:
           SKIP_LEGACY_OPENSSL_PROVIDER: ${{ secrets.SKIP_LEGACY_OPENSSL_PROVIDER }}
         with:
           arguments: build publish --no-daemon
-      - name: Docker Build and Push SNAPSHOT
+      - name: Docker Build and Push SNAPSHOT backend
         uses: philpotisk/github-action-docker-build-push@master
         env:
           DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
           DOCKER_FILE: Dockerfile
           CONTAINER_TAG: waltid/idpkit:latest
+      -   name: Docker build and push SNAPSHOT frontend
+          uses: philpotisk/github-action-docker-build-push@master
+          env:
+              DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+              DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+              DOCKER_FILE: Dockerfile-web
+              CONTAINER_TAG: waltid/idpkit-web:latest
       - name: Prepare CD K8S
         run: sed "s/_DEFAULT_DEPLOYMENT_/$GITHUB_SHA/g" k8s/deployment-dev.yaml > k8s/deployment-dev_mod.yaml
       - name: Continuous deployment K8S
