--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -13,6 +13,6 @@ RUN export NODE_OPTIONS=--openssl-legacy-provider && \
 
 FROM docker.io/nginx:stable
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY web/waltid-idpkit-ui/nginx.conf /etc/nginx/nginx.conf
 COPY --from=walt-node /code/dist /usr/share/nginx/html
 EXPOSE 80
