verifier api ingress

--- a/k8s/deployment-dev.yaml
+++ b/k8s/deployment-dev.yaml
@@ -249,6 +249,13 @@ spec:
                 name: idpkit
                 port:
                   number: 80
+          -   path: /verifier-api
+              pathType: Prefix
+              backend:
+                  service:
+                      name: idpkit
+                      port:
+                          number: 80
           -   path: /
               pathType: Prefix
               backend:
