--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -69,7 +69,7 @@
       }
     ],
     "default_nft_token_claim": {
-        "ecosystems": [ "EVM", "TEZOS", "NEAR" ],
+        "ecosystems": [ "EVM", "TEZOS", "NEAR" ,"POLKADOT"],
         "nftTokenContraints": {
           "EVM": {
             "chain": "POLYGON",
@@ -85,6 +85,12 @@
             "chain": "TESTNET",
             "factorySmartContractAddress": "",
             "smartContractAddress": "demo.khaled_lightency1.testnet"
+          },
+          "POLKADOT": {
+            "chain": "OPAL",
+            "factorySmartContractAddress": "",
+            "smartContractAddress": ""
+
           }
         }
     },
