added smart contract to opal network

--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -89,7 +89,7 @@
           "POLKADOT": {
             "chain": "OPAL",
             "factorySmartContractAddress": "",
-            "smartContractAddress": ""
+            "smartContractAddress": "5GTmz6Vc7tXsbiD6ujxyt8Yf17FnygJLcrBqvduU3c8NwmHP"
 
           }
         }
