--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -31,6 +31,7 @@
         "@near-wallet-selector/welldone-wallet": "^7.6.0",
         "@near-wallet-selector/xdefi": "^7.6.0",
         "@nuxtjs/axios": "^5.13.6",
+        "@onflow/fcl": "^1.3.2",
         "@open-wc/webpack-import-meta-loader": "^0.4.7",
         "@polkadot/api": "^10.3.2",
         "@polkadot/extension-dapp": "^0.45.5",
