--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -10,31 +10,34 @@
     },
     "dependencies": {
         "@airgap/beacon-sdk": "^3.3.0",
-        "@near-wallet-selector/coin98-wallet": "^7.6.0",
-        "@near-wallet-selector/core": "^7.6.0",
-        "@near-wallet-selector/default-wallets": "^7.6.0",
-        "@near-wallet-selector/here-wallet": "^7.6.0",
-        "@near-wallet-selector/ledger": "^7.6.0",
-        "@near-wallet-selector/math-wallet": "^7.6.0",
-        "@near-wallet-selector/meteor-wallet": "^7.6.0",
-        "@near-wallet-selector/modal-ui": "^7.6.0",
-        "@near-wallet-selector/my-near-wallet": "^7.6.0",
-        "@near-wallet-selector/narwallets": "^7.6.0",
-        "@near-wallet-selector/near-wallet": "^7.6.0",
-        "@near-wallet-selector/nearfi": "^7.6.0",
-        "@near-wallet-selector/neth": "^7.6.0",
-        "@near-wallet-selector/nightly": "^7.6.0",
-        "@near-wallet-selector/nightly-connect": "^7.6.0",
-        "@near-wallet-selector/opto-wallet": "^7.6.0",
-        "@near-wallet-selector/sender": "^7.6.0",
-        "@near-wallet-selector/wallet-connect": "^7.6.0",
-        "@near-wallet-selector/welldone-wallet": "^7.6.0",
-        "@near-wallet-selector/xdefi": "^7.6.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@near-wallet-selector/coin98-wallet": "^8.1.2",
+        "@near-wallet-selector/core": "^8.1.2",
+        "@near-wallet-selector/default-wallets": "^8.1.2",
+        "@near-wallet-selector/here-wallet": "^8.1.2",
+        "@near-wallet-selector/ledger": "^8.1.2",
+        "@near-wallet-selector/math-wallet": "^8.1.2",
+        "@near-wallet-selector/meteor-wallet": "^8.1.2",
+        "@near-wallet-selector/modal-ui": "^8.1.2",
+        "@near-wallet-selector/my-near-wallet": "^8.1.2",
+        "@near-wallet-selector/narwallets": "^8.1.2",
+        "@near-wallet-selector/near-wallet": "^8.1.2",
+        "@near-wallet-selector/nearfi": "^8.1.2",
+        "@near-wallet-selector/neth": "^8.1.2",
+        "@near-wallet-selector/nightly": "^8.1.2",
+        "@near-wallet-selector/nightly-connect": "^8.1.2",
+        "@near-wallet-selector/opto-wallet": "^8.1.2",
+        "@near-wallet-selector/sender": "^8.1.2",
+        "@near-wallet-selector/wallet-connect": "^8.1.2",
+        "@near-wallet-selector/welldone-wallet": "^8.1.2",
+        "@near-wallet-selector/xdefi": "^8.1.2",
         "@nuxtjs/axios": "^5.13.6",
-        "@onflow/fcl": "^1.3.2",
+        "@onflow/fcl": "^1.4.0",
+        "@onflow/transport-http": "^1.6.0",
         "@open-wc/webpack-import-meta-loader": "^0.4.7",
-        "@polkadot/api": "^10.3.2",
-        "@polkadot/extension-dapp": "^0.45.5",
+        "@polkadot/api": "^10.8.1",
+        "@polkadot/extension-dapp": "^0.46.4",
+        "@polkadot/util": "^12.2.2",
         "@taquito/beacon-wallet": "^15.0.0",
         "@taquito/taquito": "^15.0.0",
         "@vue/cli-plugin-babel": "^5.0.8",
@@ -43,7 +46,7 @@
         "bootstrap-vue": "^2.23.1",
         "core-js": "^3.26.0",
         "ethers": "^5.7.2",
-        "near-api-js": "^1.1.0",
+        "near-api-js": "2.1.4",
         "nuxt": "^2.15.8",
         "qrious": "^4.0.2",
         "vue": "2.7.14",
@@ -51,8 +54,5 @@
         "vue-template-compiler": "2.7.14",
         "web3modal": "^1.9.9",
         "webpack": "^4.46.0"
-    },
-    "devDependencies": {
-        "@nuxt/types": "~2.15.8"
     }
 }
