--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -54,5 +54,9 @@
         "vue-template-compiler": "2.7.14",
         "web3modal": "^1.9.9",
         "webpack": "^4.46.0"
+    },
+    "devDependencies": {
+        "@nuxt/types": "~2.15.8",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7"
     }
 }
