--- a/config/idp-config.json
+++ b/config/idp-config.json
@@ -109,7 +109,7 @@
           "ALGORAND": {
             "chain": "TESTNET",
             "factorySmartContractAddress": "",
-            "smartContractAddress": "",
+            "smartContractAddress": "266553681",
             "collectionPath": ""
           }
         }
