--- a/walt.yml
+++ b/walt.yml
@@ -21,6 +21,7 @@ providers:
     moonbeam: "https://rpc.api.moonbeam.network"
     unique: "https://rpc.unique.network"
     opal: "https://rpc-opal.unique.network"
+    shimmerevm: "https://json-rpc.evm.testnet.shimmer.network"
 
 indexersUrl:
     uniqueUrl: "https://api-unique.uniquescan.io/v1/graphql"
