--- a/web/waltid-idpkit-ui/package.json
+++ b/web/waltid-idpkit-ui/package.json
@@ -35,6 +35,7 @@
         "@onflow/fcl": "^1.4.0",
         "@onflow/transport-http": "^1.6.0",
         "@open-wc/webpack-import-meta-loader": "^0.4.7",
+        "@perawallet/connect": "^1.3.3",
         "@polkadot/api": "^10.8.1",
         "@polkadot/extension-dapp": "^0.46.4",
         "@polkadot/util": "^12.2.2",
@@ -43,6 +44,7 @@
         "@taquito/taquito": "^15.0.0",
         "@vue/cli-plugin-babel": "^5.0.8",
         "@walletconnect/web3-provider": "^1.8.0",
+        "algosdk": "^2.7.0",
         "bootstrap": "^4.6.2",
         "bootstrap-vue": "^2.23.1",
         "core-js": "^3.26.0",
